🔧 chore: Update .gitignore to exclude PDF files
chore: Update .gitignore to exclude PDF files

Add *.pdf to .gitignore to prevent PDF files from being tracked
by Git, ensuring a cleaner repository and avoiding unnecessary
file clutter.
```

--- a/2024年编译原理课程实践报告.md
+++ b/2024年编译原理课程实践报告.md
@@ -4,9 +4,9 @@
 
 2025-01-05 18:25: 由于时间比较紧张, 所以到目前为止, 编译器只实现了 Lv1-Lv7, 在硬性 DDL 前应该会实现全部内容, 报告可能会在教学网提交多次更新版本, 本报告修改自我的 [Compiler Principles Lab Notes](https://www.lyt0112.com/blog/compiler_principles_lab_note-zh) .
 
-## 一、编译器概述
+## 编译器概述
 
-### 1.1 基本功能
+### 基本功能
 
 本编译器基本具备如下功能：
 1. 词法分析：将源代码文本转换为符号流(Tokens)，识别关键字、标识符、运算符等基本语言元素。
@@ -14,7 +14,7 @@
 3. 中间代码生成：将AST转换为机器无关的中间表示(IR)，为后续优化和目标代码生成做准备。
 4. RISC-V代码生成：通过指令选择和寄存器分配，将中间代码转换为可执行的RISC-V汇编代码。
 
-### 1.2 主要特点
+### 主要特点
 
 本编译器的主要特点是**模块化**、**可读性**、**面向控制流的 IR 优化**。
 
@@ -22,13 +22,13 @@
 2. 可读性：通过清晰的命名, 注释和分析分支条件的原则，使得代码易于理解和维护。
 3. 面向控制流的 IR 优化：在 IR 层面进行优化，使得优化后的 IR 在控制流被打断或者跳转时，能够剪枝不可达的代码。
 
-## 二、编译器设计
+## 编译器设计
 
-### 2.1 主要模块组成
+### 主要模块组成
 
 编译器由5个主要模块组成：词法分析器(sysy.l)负责将源代码转换为token流，语法分析器(sysy.y)负责构建AST，中间代码生成器(koopa.cpp)负责生成IR，目标代码生成器(riscv.cpp)负责生成RISC-V汇编，工具函数模块(koopa_util.cpp/riscv_util.cpp)提供辅助功能。
 
-### 2.2 主要数据结构
+### 主要数据结构
 
 本编译器最核心的数据结构是抽象语法树(AST)。在实现过程中，设计了一系列节点类来表示不同的语法结构，所有节点类都继承自基类 BaseAST：
 
@@ -76,30 +76,30 @@ public:
 };
 ```
 
-### 2.3 主要设计考虑及算法选择
+### 主要设计考虑及算法选择
 
-#### 2.3.1 符号表的设计考虑
+#### 符号表的设计考虑
 本编译器采用栈式符号表设计，使用vector存储多层作用域的符号表。每进入一个新的作用域（函数或语句块）时，创建新的符号表并压入栈顶；退出作用域时，弹出栈顶符号表。查找变量时从栈顶向下遍历，实现就近原则。为解决同一作用域内重复声明变量的问题，使用map记录每个变量在各层级的分配状态。变量命名采用"变量名_层级"的格式（如a_1、a_2），确保不同作用域的同名变量可以区分。
 
-#### 2.3.2 寄存器分配策略
+#### 寄存器分配策略
 采用基于栈的简单寄存器分配策略。所有局部变量默认存储在栈上，需要使用时加载到寄存器，使用完毕后写回栈内存。为了处理表达式计算，实现了一个简单的寄存器池，通过map记录寄存器的使用状态。当需要新的寄存器时，优先选择空闲寄存器；若无空闲寄存器，则将当前寄存器中的值存回栈中。这种策略虽然不够优化，但实现简单且正确性有保证。
 
-#### 2.3.3 采用的优化策略
+#### 采用的优化策略
 
 1. 短路求值：对逻辑运算符（如||、&&）实现短路求值，避免不必要的计算。
 2. 控制流优化：对提前返回的分支进行识别，避免生成不可达代码。
 3. 常量表达式优化：编译期对常量表达式进行计算，减少运行时开销。
 
-#### 2.3.4 其它补充设计考虑
+#### 其它补充设计考虑
 
 1. 采用面向对象设计，将不同语法结构抽象为独立的AST节点类，提高代码可维护性。
 2. 使用智能指针管理AST节点内存，避免内存泄漏。
 3. 通过Result类封装中间代码生成的返回值，统一处理控制流和表达式计算结果。
 4. 实现了完整的错误处理机制，对语法错误和语义错误提供清晰的提示信息。
 
-## 三、编译器实现
+## 编译器实现
 
-### 3.1 各阶段编码细节
+### 各阶段编码细节
 
 #### Lv1. main函数和Lv2. 初试目标代码生成
 在这两个阶段，主要完成了编译器的基础框架搭建。使用flex生成词法分析器，bison生成语法分析器，并实现了最基本的AST节点类和中间代码生成功能。这个阶段虽然简单，但是为后续开发打下了良好的基础，特别是建立了清晰的模块化结构。
@@ -209,14 +209,14 @@ while语句的实现涉及到循环控制流的处理。主要难点在于如何
 #### Lv9. 数组
 （待完成）
 
-### 3.2 工具软件介绍
+### 工具软件介绍
 1. `flex/bison`：用于生成词法分析器和语法分析器。flex根据正则表达式规则生成词法分析器，将源代码转换为token流；bison根据文法规则生成语法分析器，构建抽象语法树。
 
 2. `libkoopa`：用于处理Koopa IR的库。提供了解析、遍历和操作Koopa IR程序的接口，简化了中间代码到目标代码的转换过程。主要用于将Koopa IR转换为RISC-V汇编代码。
 
 3. `CMake`：用作项目的构建系统。通过编写CMakeLists.txt配置编译规则，自动处理项目依赖关系，生成对应平台的构建文件，简化了编译器项目的构建过程。
 
-### 3.3 测试情况说明
+### 测试情况说明
 
 在实验过程中，我遇到并解决了以下几个关键问题：
 
@@ -251,9 +251,9 @@ while语句的实现涉及到循环控制流的处理。主要难点在于如何
 
 这些问题的发现和解决帮助我更深入地理解了编译原理中的重要概念，如作用域规则、语法分析技术等。同时，通过构造边界测试用例（如立即数溢出、复杂的嵌套结构等），提高了编译器的健壮性。
 
-## 四、实习总结
+## 实习总结
 
-### 4.1 收获和体会
+### 收获和体会
 
 通过这次编译原理课程实践，我获得了以下几点重要收获：
 
@@ -263,19 +263,17 @@ while语句的实现涉及到循环控制流的处理。主要难点在于如何
 
 3. **调试技能的提高**：在处理立即数溢出、变量作用域等问题时，我提高了调试和问题定位的能力。学会了如何构造边界测试用例，以及如何通过日志和调试工具定位问题。
 
-### 4.2 学习过程中的难点，以及对实习过程和内容的建议
+### 学习过程中的难点，以及对实习过程和内容的建议
 
 1. **难点**：
    - 立即数溢出问题的处理：在RISC-V代码生成时，需要特别注意指令中立即数的范围限制
    - 作用域和变量管理：处理不同作用域中的同名变量，以及确保变量的正确生命周期
-   - 寄存器分配策略：在有限的寄存器资源下，如何高效地分配和管理寄存器
-
+   - 寄存器分配策略：在有限的寄存器资源下，如何分配和管理寄存器
 2. **建议**：
    - 建议在实验文档中增加更多关于边界情况的说明，比如立即数溢出问题在文档中提到但直到Lv6才测试
-   - 可以提供更多关于调试技巧和工具使用的指导
-   - 建议增加性能优化相关的选做内容，让学生有机会尝试更高级的编译优化技术
+   - 多提供一些测试样例口牙...
 
-### 4.3 对老师讲解内容与方式的建议
+### 对老师讲解内容与方式的建议
 
 1. **理论与实践结合**：
    - 建议在理论课程中增加更多实际编译器开发中会遇到的案例分析
